# tts-stt-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml
dataset/stt/en/: manifest.json
dataset/stt/es/: manifest.json
dataset/tts/en/: texts.json
dataset/tts/es/: texts.json
scripts/: generate_stt_audio.py
src/tts_stt_benchmark/: __init__.py  config.py  models.py  runner.py  storage.py
src/tts_stt_benchmark/adapters/: __init__.py
src/tts_stt_benchmark/adapters/stt/: openai_whisper.py  speechmatics.py
src/tts_stt_benchmark/adapters/tts/: deepgram_tts.py  google_tts.py  openai_tts.py
src/tts_stt_benchmark/cli/: generate_report.py  run_benchmark.py  run_stt.py  run_tts.py
src/tts_stt_benchmark/metrics/: audio_checks.py  stats.py  wer_cer.py
src/tts_stt_benchmark/reporting/: report_builder.py
tests/unit/: test_audio_checks.py  test_report_builder.py  test_stats.py  test_storage.py  test_wer_cer.py
